Fixing invalid JSON syntax

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,4 @@
 {
   "name": "relaxedws/merge",
-  "description": "Library used to perform merges between normalized array structures.",
+  "description": "Library used to perform merges between normalized array structures."
 }
