--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project name="lca" default="build" basedir=".">
+<project name="merge" default="build" basedir=".">
     <property name="basedir" value="."/>
 
     <target name="build" depends="phpcs, phpunit" />
