--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ php:
   - 5.5
   - 5.6
   - 7.0
+  - 7.2
   - hhvm
 
 matrix:
@@ -16,7 +17,7 @@ before_install:
   - composer selfupdate
   - pear channel-discover pear.phing.info
   - pear install phing/phing
-  - pear install pear/PHP_CodeSniffer
+  - pear install pear/PHP_CodeSniffer-2.9.1
   - phpenv rehash
 
 install:
